# QoSCOPE

./: 01_report.py  02_report.py  03_report.py  04_report.py  README.md  ai_module.py  backend_standlone.py  client_app_mqtt.py  client_app_video_ul.py  gparams.py  helper.py  main_backend.py  main_gui.py  monitor.py  new_backend.py  orchestrator.py  physical.py  physical_standalone.py
eaas/application/: QoSCOPEApplication.mf  QoSCOPEApplication.yaml
eaas/docker/: .env  docker-compose.yml
eaas/docker/measurement-tools/: Dockerfile  supervisord.conf
eaas/docker/server-opencv/: Dockerfile  src.py
eaas/docker/server-stream/: Dockerfile  src.py
eaas/scripts/: build.sh  clean.sh
test1/application/: QoSCOPEDebugApplication.mf  QoSCOPEDebugApplication.yaml
test2/: README.md  bundle.sh
test2/application/: NanoMQApplication.mf  NanoMQApplication.yaml
test2/application/Artifacts/MCIOPs/: nanomq.tgz
test2/experiment/: MyExperiment.yaml.template  NanoMQExperiment.mf  NanoMQExperiment.yaml  NanoMQExperiment.yaml.template
test_gradual_01_public_mqtt/application/: ExampleApplication.mf
test_gradual_01_public_mqtt/python_app/: Dockerfile
test_gradual_02_feron_single/: .gitignore
test_gradual_02_feron_single/experiment/: MyExperiment.mf
test_gradual_02_feron_single/python_app/: README.md  pyproject.toml
test_gradual_02_feron_single/python_app/src/dutch_trialsite_test_app/: metrics.py
test_gradual_02_feron_single/python_app/static/: index.html
test_gradual_04_final_only_ue/application/: ExampleApplication.yaml
unit_tests/: test_mqtt_publisher.py
(+23 files in other folders)
